# md-toc

./: .allowed_licenses.yml  .gitignore  .license-check.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .project.mk  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  SECURITY.md  benchmark.csv  pyproject.toml  requirements-dev.txt  requirements-freeze.txt  requirements.txt  setup.cfg  setup.py
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: unittest.yml
asciinema/: md_toc_asciinema_0_0_1.json  md_toc_asciinema_1_0_0.json  md_toc_asciinema_1_0_0_demo.sh  md_toc_asciinema_2_0_0.json  md_toc_asciinema_2_0_0_demo.sh  md_toc_asciinema_3_0_0.json  md_toc_asciinema_3_0_0_demo.sh  md_toc_asciinema_3_1_0.json  md_toc_asciinema_3_1_0_demo.sh  md_toc_asciinema_5_0_0.json  md_toc_asciinema_5_0_0_demo.sh  md_toc_asciinema_6_0_0.json  md_toc_asciinema_6_0_0_demo.sh  md_toc_asciinema_6_0_1_demo.sh  md_toc_asciinema_6_0_2.json  md_toc_asciinema_7_0_0.json  md_toc_asciinema_7_0_0_demo.sh  md_toc_asciinema_7_0_1_demo.sh  md_toc_asciinema_7_0_4.json  md_toc_asciinema_7_1_0.json  md_toc_asciinema_7_1_0_demo.sh  md_toc_asciinema_7_2_0.json  md_toc_asciinema_7_2_0_demo.sh  md_toc_asciinema_8_0_0.json  md_toc_asciinema_8_0_0_demo.sh  md_toc_asciinema_8_0_1.json  md_toc_asciinema_8_0_1_demo.sh  md_toc_asciinema_8_1_0.json  md_toc_asciinema_8_1_0_demo.sh  md_toc_asciinema_8_1_1_demo.sh  md_toc_asciinema_8_1_3.json  md_toc_asciinema_8_2_0_demo.json  md_toc_asciinema_8_2_0_demo.sh  md_toc_asciinema_8_2_3_demo.json  md_toc_asciinema_9_0_0_demo.sh
docs/: Makefile  api.rst  cli.rst  compatibility_table.rst  conf.py  contributing.rst  copyright_license.rst  features.rst  index.rst  install.rst  markdown_specification.rst  meta.rst  pep.rst  pre_commit_hook.rst  source_code.rst  test.rst  workflow.rst
docs/_static/css/: custom.css
docs/rules/: anchor_link_types_and_behaviours.rst  code_fence.rst  headers.rst  index.rst  link_lables.rst  list_items.rst  toc_marker.rst
md_toc/: __init__.py  __main__.py  api.py  cli.py  cmark.py  constants.py  exceptions.py  generic.py  types.py
md_toc/cmark/: __init__.py  buffer_c.py  buffer_h.py  chunk_h.py  cmark.py  cmark_ctype_c.py  cmark_h.py  cmark_reference_h.py  houdini_h.py  houdini_html_u_c.py  inlines_c.py  node_c.py  node_h.py  reference_h.py  references_c.py  references_h.py  scanners_c.py  scanners_h.py  utf8_c.py
md_toc/tests/: __init__.py  benchmark.py  fuzzer.py  tests.py
tests/: __init__.py  benchmark.sh  tests.py
