# setup.cfg
#
# Copyright (C) 2022-2024 Franco Masotti (see /README.md)
#
# This file is part of md-toc.
#
# md-toc is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# md-toc is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with md-toc.  If not, see <http://www.gnu.org/licenses/>.
#

[metadata]
name = md_toc
# 'version' needs setuptools >= 39.2.0.
version = 8.2.3
license = GPLv3+,
description = Automatically generate and add an accurate table of contents to markdown files
long_description = file: README.md
long_description_content_type = text/markdown
author = Franco Masotti
author_email = franco.masotti@tutanota.com
keywords =
    markdown
    toc
    text
    table-of-contents
    documentation
url = https://blog.franco.net.eu.org/software/#md-toc
project_urls =
    Bug Tracker = https://github.com/frnmst/md-toc/issues
    Documentation = https://docs.franco.net.eu.org/md-toc/
    API Reference = https://docs.franco.net.eu.org/md-toc/api.html
    Source Code = https://github.com/frnmst/md-toc
    Changelog = https://blog.franco.net.eu.org/software/CHANGELOG-md-toc.html
    Funding = https://github.com/frnmst/md-toc#support-this-project
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Documentation
    Topic :: Software Development
    Topic :: Text Processing
    Topic :: Text Processing :: Markup :: Markdown
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
# https://iscinumpy.dev/post/bound-version-constraints/#pinning-the-python-version-is-special
python_requires = >=3.8
install_requires = file: requirements.txt
packages = find:

[options.entry_points]
console_scripts =
    md_toc = md_toc.__main__:main

[options.packages.find]
exclude=
    *tests*

[options.package_data]
* = *.txt, *.rst

[yapf]
based_on_style = pep8
indent_width = 4

[flake8]
ignore =
    E125
    E131
    E501
    W503
    W504
    F401

[isort]
# See
# https://github.com/ESMValGroup/ESMValCore/issues/777
multi_line_output = 3
include_trailing_comma = true

[tox:tox]
requires =
    tox>=4
env_list = py{38,39,310,311,312,313}

[testenv]
description = run the tests with unittest
package = wheel
wheel_build_env = .pkg
deps =
    pyfakefs>=5,<6
commands =
    python3 -m unittest md_toc.tests.tests --failfast --locals --verbose

[testenv:fuzzer]
description = run the fuzzer
package = wheel
wheel_build_env = .pkg
deps =
    atheris>=2.3,<2.4
commands =
    python3 -m md_toc.tests.fuzzer
